fix images overflow

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -26,6 +26,8 @@ body {
 img {
   vertical-align: middle;
   border: 0;
+  max-width: 100%;
+  height: auto;
 }
 
 a,
